syntax = "proto3";

package order;

// Specify the Go package name for generated code
option go_package = "api-gateway-service/generated;order";

service OrderService {
  rpc GetOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
  string customer_name = 3;
}
